Bug 461588 - "I18N_ARGUMENT_MISSING" under Edit Account -> Hierarchy
Summary: "I18N_ARGUMENT_MISSING" under Edit Account -> Hierarchy
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-08 13:21 UTC by Paul Worrall
Modified: 2024-12-19 09:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
screenshot (39.05 KB, image/png)
2022-11-08 13:21 UTC, Paul Worrall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2022-11-08 13:21:04 UTC
Created attachment 153583 [details]
screenshot

STEPS TO REPRODUCE
1. Right click an account and select "Edit Account..."
2. Display the Hierarchy tab

OBSERVED RESULT
Text at the top contains "I18N_ARGUMENT_MISSING" in two places (see attachment)

EXPECTED RESULT
That string is not present

SOFTWARE/OS VERSIONS
KMyMoney: 5.1.80
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
I'm in en_GB.UTF8
Comment 1 Paul Worrall 2022-11-08 13:23:58 UTC
Previously fixed in other places, see: https://invent.kde.org/office/kmymoney/-/merge_requests/15/
Comment 2 Thomas Baumgart 2022-11-08 14:37:14 UTC
Git commit 86a4b5c6147d727e02d9d8fe7a1b37fd33175dc4 by Thomas Baumgart.
Committed on 08/11/2022 at 14:37.
Pushed by tbaumgart into branch 'master'.

Fix i18nc argument handling

M  +2    -2    kmymoney/dialogs/knewaccountdlg.cpp

https://invent.kde.org/office/kmymoney/commit/86a4b5c6147d727e02d9d8fe7a1b37fd33175dc4