Fix i18nc argument handling

BUG: 461588